--- a/teaching/1610.markdown
+++ b/teaching/1610.markdown
@@ -3,7 +3,7 @@ layout: default
 title: MATH-1610
 ---
 
-# MATH-1610 Fall 2016 Course Syllabus
+# MATH-1610B (CRN 2695) Spring 2017 Course Syllabus
 
 ### When, where, and who
 
@@ -43,22 +43,20 @@ These prerequisite can be satisfied by any one of the following:
 
 ### Textbook
 
-- _Calculus: Early Transcendentals_ (6th edition) by Larson & Edwards
-- _Calculus_ by Gilbert Strang (PDF version is _free_!)
+- [Required] _Calculus: Early Transcendentals_ (any edition) by Larson & Edwards
+  (8th edition ISBN: 978-1285741550)
+- [Optional] _Calculus_ by Gilbert Strang (PDF version is _free_!)
     * [One single big PDF file](http://ocw.mit.edu/ans7870/resources/Strang/Edited/Calculus/Calculus.pdf)
     * [PDF files by chapters](https://ocw.mit.edu/resources/res-18-001-calculus-online-textbook-spring-2005/textbook/)
     * [A few greate video lectures](https://ocw.mit.edu/resources/res-18-005-highlights-of-calculus-spring-2010/highlights_of_calculus/big-picture-of-calculus/)
 
-Reading assignment and homework problems will be assigned from the textbook.
+Reading assignment and homework problems will be assigned from the required textbook.
 
 ### Attendance and participation
 
 Participation in in-class discussions and activities is an important part
 of the learning process.
 Therefore class attendance is expected and recorded.
-It is your responsibility to sign the attendance sheet at each class meeting.
-Moreover, in order to get a passing grade you should have attended at least 80%
-of the classes for which attendance was recorded.
 
 ### Code of conduct
 
@@ -86,21 +84,23 @@ However, all the quizzes and exams are designed so that no calculator will be ne
 Therefore calculators or any smart devices with internet capabilities
 are not allowed on any of the quizzes and exams.
 
+### Homework
+
+Practice is an important part of learning process.
+Homework problem will be assigned every week.
+
 ### Daily quizzes
 
 There will be a short quiz at the beginning of __every__ class meeting
-to test our understanding of the material discussed in the previous meeting.
+to test our understanding of the material discussed in the previous meetings.
 Since the solutions will be released on the same day,
 __no makeup quiz will be offered__.
 However, a missing quiz may be excused if valid reasons
-(o official university events, illness or medical emergencies,
+(official university events, illness or medical emergencies,
 death of immediate family, military orders, jury duty,
 religious holidays, or extreme weather conditions)
-and _proper documentation_ are provided _in advance_.
-Otherwise, a missing quiz receives a score of zero.
-
-### Worksheets
-
+and _proper documentation_ are provided (preferably _in advance_).
+Otherwise, a missing quiz receives a score of _zero_.
 
 ### Final exam
 
@@ -115,16 +115,16 @@ The final exam consists of two parts:
 
 ### Grade composition
 
-Your final grade is determined according to your overall performance of quizzes,
-the in-class exams, and the final exam, and is calculated according to the
-following weights.
+Your final grade is determined according to your overall performance of
+homework, projects, quizzes, and the final exam,
+and is calculated according to the following weights:
 
 | Component  | Points |
 |------------|--------|
-| Worksheet  |  250   |
-| Quizzes    |  500   |
-| Projects   |  200   |
-| Final Exam |   50   |
+| Homework   |   80   |
+| Projects   |   80   |
+| Quizzes    |  540   |
+| Final Exam |  100   |
 
 ### Grading scale
 
